--- a/package.json
+++ b/package.json
@@ -8,20 +8,24 @@
     "build": "tsc",
     "watch": "tsc -w",
     "test": "jest",
-    "cdk": "cdk"
+    "cdk": "cdk",
+    "deploy": "cdk deploy --all --require-approval never"
   },
   "devDependencies": {
     "@types/jest": "^29.5.12",
     "@types/node": "22.5.4",
+    "aws-cdk": "2.162.1",
     "jest": "^29.7.0",
     "ts-jest": "^29.2.5",
-    "aws-cdk": "2.162.1",
     "ts-node": "^10.9.2",
     "typescript": "~5.6.2"
   },
   "dependencies": {
-    "aws-cdk-lib": "2.162.1",
+    "@aws-cdk/aws-kinesisanalytics-flink-alpha": "^2.180.0-alpha.0",
+    "@aws-sdk/client-kinesis": "^3.750.0",
+    "aws-cdk-lib": "^2.180.0",
     "constructs": "^10.0.0",
+    "csv-parse": "^5.6.0",
     "source-map-support": "^0.5.21"
   }
 }
